Added some pictures to the notebooks

--- a/Tutoriel_SVM_digits.ipynb
+++ b/Tutoriel_SVM_digits.ipynb
@@ -22,7 +22,10 @@
    "id": "6f1caac8",
    "metadata": {},
    "source": [
-    "Notre travail va consister à créer un algorithme qui identifie le chiffre inscrit à la main sur une image. Il s'agit donc d'un algorithme de **classification**, qui va assigner chaque image à une catégorie correspondant à un chiffre de 0 à 9."
+    "Notre travail va consister à créer un algorithme qui identifie le chiffre inscrit à la main sur une image. Il s'agit donc d'un algorithme de **classification**, qui va assigner chaque image à une catégorie correspondant à un chiffre de 0 à 9.\n",
+    "\n",
+    "![Chiffres manuscrits](https://assets.digitalocean.com/articles/handwriting_tensorflow_python3/wBCHXId.png)\n",
+    "\n"
    ]
   },
   {
