--- a/Tutoriel_k_means_iris.ipynb
+++ b/Tutoriel_k_means_iris.ipynb
@@ -23,7 +23,11 @@
    "source": [
     "Dans ce tutoriel, nous allons classifier des iris en trois catégories en se basant sur quatre données : la longueur et la largeur de leurs sépales, et la longueur et la largeur de leurs pétales. Il s'agit donc d'un problème de classification.\n",
     "\n",
-    "**Il est important de noter ici que l'on ne connaît pas à l'avance les différentes catégories**. Pour réaliser ce travail, nous utiliserons [ce set de données](https://scikit-learn.org/stable/datasets/toy_dataset.html#iris-dataset)."
+    "**Il est important de noter ici que l'on ne connaît pas à l'avance les différentes catégories**. Pour réaliser ce travail, nous utiliserons [ce set de données](https://scikit-learn.org/stable/datasets/toy_dataset.html#iris-dataset).\n",
+    "\n",
+    "\n",
+    "![Photo d'iris](https://www.deco.fr/sites/default/files/styles/article_970x500/public/2020-02/shutterstock_146890418.webp?itok=tI0fgr5A)\n",
+    "\n"
    ]
   },
   {
