--- a/Tutoriel_régression_linéaire_california_housing.ipynb
+++ b/Tutoriel_régression_linéaire_california_housing.ipynb
@@ -21,7 +21,10 @@
    "id": "694471e2",
    "metadata": {},
    "source": [
-    "Notre travail va consister à créer un algorithme qui prédit le prix médian des maisons dans un quartier de Californie en fonction de données telles que les revenus médians des habitants du quartier, la population du quartier, le nombre médian de chambres et de pièces... Pour cela, nous utiliserons [ce set de données](https://inria.github.io/scikit-learn-mooc/python_scripts/datasets_california_housing.html)."
+    "Notre travail va consister à créer un algorithme qui prédit le prix médian des maisons dans un quartier de Californie en fonction de données telles que les revenus médians des habitants du quartier, la population du quartier, le nombre médian de chambres et de pièces... Pour cela, nous utiliserons [ce set de données](https://inria.github.io/scikit-learn-mooc/python_scripts/datasets_california_housing.html).\n",
+    "\n",
+    "![Maison américaine](https://www.guardianstorage.com/wp-content/uploads/2018/12/new-homeowner-checklist.jpg)\n",
+    "\n"
    ]
   },
   {
